--- a/style.css
+++ b/style.css
@@ -177,3 +177,16 @@ footer {
     padding: 24px;
     font-size: 14px;
 }
+
+/* media queries */
+
+@media (min-width:700px) {
+    :root {
+        --bg-url: url(assets/bg-desktop.jpg);
+    }
+
+
+    .light {
+        --bg-url: url(assets/bg-light-desktop.jpg);
+    }
+}
