--- a/style.css
+++ b/style.css
@@ -86,11 +86,16 @@ body * {
     left: 0;
     z-index: 1;
     transform: translateY(-50%);
+
+    animation: slide-out 0.3s;
 }
 
+#switch button:hover {
+    outline: 8px solid var(--highlight-color);
+} 
+
 .light #switch button {
-    right: 0;
-    left: initial;
+    animation: slide-in 0.3s forwards;
 
 }
 
@@ -188,5 +193,26 @@ footer {
 
     .light {
         --bg-url: url(assets/bg-light-desktop.jpg);
+    }
+}
+
+/* animations */
+@keyframes slide-in {
+    from {
+        left: 0;
+    }
+
+    to {
+        left: 50%;
+    }
+}
+
+@keyframes slide-out {
+    from {
+        left: 50%;
+    }
+
+    to {
+        left: 0;
     }
 }
